# DEEPL-brainshake

./: .gitignore  README.md  environment.yml  pyproject.toml
Architecture/Channel Fusion/LSTMExampleCode(ChakrabartiChannelFusion)/Code/Models/: EpilepsyLSTM.py  __init__.py
docs/Data Set Description/: Readme_epilepsy_DATA.txt
latex/: main.tex
mermaid/: cnn.mmd  randomforest.mmd  threshold.mmd
outputs/demo/reports/: normal_sample_report.json
outputs_real/: summary.json
src/: __init__.py  analyze_real_data.py  create_visualizations.py  inspect_data.py
src/brainshake/: __init__.py  cli.py  cnn.py  data.py  explore_data.py  features.py  train.py  visualize.py
src/brainshake/cnn/: model.py
src/brainshake/data_analyze/: analyze_data.py  visualize_data.py
src/brainshake/data_handling/: extract_features.py  load_data.py
src/brainshake/models/cnn/: evaluate.py  model.py
src/brainshake/models/randomforest/: __init__.py  evaluate.py  evaluation.py  model.py
src/brainshake/models/svm/: evaluate.py  model.py
src/brainshake/models/threshold/: classifier.py  evaluate.py
src/brainshake/plotting/: plots.py
src/brainshake/threshold_classifier/: classifier.py  evaluate_thresholds.py
src/scripts/: compile.sbatch.sh  pull.sh  push.sh  train.sh  train_cnn.sbatch.sh
