[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainshake"
version = "0.1.0"
description = "Simple CNN training and inference for Seizure detection"
readme = "README.md"
dependencies = [
  "torch",
  "torchvision",
  "Pillow",
  "numpy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "pyarrow",
]

[project.scripts]
brainshake = "brainshake.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
